save/load update
 - loading and downloading game configs now supported
- added auto solving. spam the button multiple times to solve
 - added sound effects and annoying bgm
 - minified p5.js and p5.sound.js into single p5.js file

--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,8 @@ canvas {
   border-radius: 6px;
 }
 
+/* FIXME */
+
 /* html:fullscreen body,
 html:-webkit-full-screen body,
 html:-moz-full-screen body,
